# tcg-collection

./: .gitignore  README.md
database/: README.md  config.py  createdb.py
doc/: db.plantuml
flask-app/: pyproject.toml
flask-app/flaskr/: __init__.py  auth.py  cards.py  collection.py  data.csv  db.py  schema.sql  stats.py
flask-app/flaskr/static/: style.css
flask-app/flaskr/static/style/: auth.css  base.css  index.css
flask-app/flaskr/templates/: base.html  create.html  import.html  index.html  stats.html  update.html
flask-app/flaskr/templates/auth/: login.html  register.html
flask-app/flaskr/templates/collection/: create.html  index.html  stats.html  update.html
flask-app/tests/: conftest.py  conftests.py  data.sql  test_auth.py  test_cards.py  test_collection.py  test_db.py
flask-app/tests/resources/: data.sql  test-csv.csv
price-tracker/: README.md  test.py
