[project]
name = "flaskr"
version = "1.0.0"
author = [
    { name="Ludovic Estival"}
]
description = "Basic app to manage a card collection"
dependencies = [
    "flask",
    "pytest",
    "coverage",
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]